data/derived/comb/progs/unify/prog0995.ml.out
Characters 46-78:
  wwhile ((if f b = b then (failwith "Asd", failwith "asd") else failwith "asd") ,b);;
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
